--- a/style.css
+++ b/style.css
@@ -1,98 +1,270 @@
-*{
-    padding: 0;
-    margin: 0;
-    color:white;
-}
+{
+
+        margin: 0;
+
+        padding: 0;
+
+        box-sizing: border-box;
+
+    }
 
 
-h1{
-    color:green;
-}
 
 
-body{
-    
-}
-button{
-    color:brown;
-    background-color:white;
-} 
-#heading1{
-    color: blue;
-}
-#heading2{
-    color:brown;
-}
-#heading3{
-    color:magenta;
-}
-#Santi{
-    color:aqua
-}
-#box{
-    background-color: blue;
-    /* color: white; */
-}
-.heading{
-    color: red;
-}
-p{
-    text-align: center;
-}
-h1{
-    text-decoration: blue solid underline;
-}
-a{
-    text-decoration: none;
-}
-#newtext{
-    font-weight: normal;
-}
-#One{
-    font-family: arial;
-    font-size: 25px;
-}
-#two{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 1px;
-}
-.div{
-  height: 200px; 
-  background-color: pink; 
-  width: 200px;
-  border-width: 2px;
-  border-style: solid;
-  border-color: brown;
-border-radius: 5px;
-padding: 25px;
-}
-#div1{
+    .sub-page {
 
-    height: 100px;
-    width: 100px;
-    background-color: green;
-    border-radius: 50%;
-}
-#navbar{
-    height: 60px;
-    background-color: #0f1111;
-}
-#logo{
-    color:#f08804;
-    font-size: 25 px;
-}
-a{
-    margin-right: 200px;
-}
-body{
-    background-image:url(images.jpg);
-    background-size:cover;
-}
-#Hello{
-    height: 100px;
-    width: 100px;
-    background-image: url(download.gif);
-    background-size: cover;
-    background-repeat: no-repeat;
-    
-}
+        width: 1266px;
+
+        height: 559px;
+
+        position: absolute;
+
+        background: url(premier university.jpg);
+
+        background-size: cover;
+
+        background-position: center;
+
+        left: 50px;
+
+        top: 50px;
+
+    }
+
+    .navigation-bar {
+
+        display: flex;
+
+        align-items: center;
+
+        padding: 20px;
+
+        padding-left: 80px;
+
+        padding-right: 30px;
+
+        padding-top: 50px;
+
+    }
+
+    .logo {
+
+        position: fixed;
+
+        margin-top: 10px;
+
+    }
+
+    .logo a {
+
+        text-decoration: none;
+
+        color: rgb(16, 15, 15);
+
+        font-size: 30px;
+
+
+
+
+
+    }
+
+    nav {
+
+        flex: 1;
+
+        position: fixed;
+
+        right: 0;
+
+    }
+
+    nav ul {
+
+        display: inline-block;
+
+        list-style: none;
+
+    }
+
+    nav ul li {
+
+        display: inline-block;
+
+        margin-right: 90px;
+
+        margin-top: 17px;
+
+    }
+
+    nav ul li a {
+
+        text-decoration: none;
+
+        font-size: 20px;
+
+        color: rgb(32, 28, 28);
+
+        font-family: sans-serif;
+
+    }
+
+    nav ul li a:hover {
+
+        color: saddlebrown;
+
+    }
+
+    .nall {
+
+        width: 70px;
+        height: auto;
+        position: absolute;
+        top: -70px;
+        left: 1000px;
+    }
+
+
+
+    .row {
+
+        display: flex;
+
+        align-items: center;
+
+        flex-wrap: wrap;
+
+        justify-content: space-around;
+
+    }
+
+    .col-1 {
+
+        flex-basis: 50%;
+
+        min-width: 300px;
+
+    }
+
+    .form-box {
+
+        width: 300px;
+
+        height: 400px;
+
+        position: relative;
+
+        top: 50px;
+
+        left: 120px;
+
+        background: rgba(0, 0, 0, 0.6);
+
+    }
+
+    .main-heading {
+
+        color: orangered;
+
+        padding-bottom: 20px;
+
+    }
+
+    .form {
+
+        position: relative;
+
+        margin: 0 auto 100px;
+
+        padding: 45px;
+
+        text-align: center;
+
+    }
+
+    .form input {
+
+        font-family: sans-serif;
+
+        outline: none;
+
+        border: none;
+
+        border-bottom: 1px solid black;
+
+        width: 100%;
+
+        margin: 0 0 15px;
+
+        padding: 15px;
+
+        font-size: 14px;
+
+    }
+
+    .form button {
+
+        font-family: sans-serif;
+
+        width: 100%;
+
+        color: white;
+
+        font-size: 14px;
+
+        cursor: pointer;
+
+        padding: 15px;
+
+        border: none;
+
+        background: coral;
+
+    }
+
+    .form .message {
+
+        font-size: 12px;
+
+        margin: 15px 0 0;
+
+        color: white;
+
+    }
+
+    .form .message a {
+
+        color: orangered;
+
+        text-decoration: none;
+
+    }
+
+    .form .register-form {
+
+        display: none;
+
+    }
+
+    .defination {
+
+        text-align: left;
+
+        font-size: 30px;
+
+        color: rgb(255, 255, 255);
+
+        font-family: 'Kaushan Script', cursive;
+
+        padding-left: 60px;
+
+    }
+
+    .col-1 p {
+        color: brown;
+        /* Change the font color to your desired color */
+        font-family: 'Arial', sans-serif;
+        /* Change the font family to your desired font */
+        font-size: 16px;
+        /* Change the font size to your desired size */
+    }
